app-mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
    context: docker-k8s-lab
spec:
  containers: 
    - 
      name: mysql
      image: mysql:latest
      ports: 
        - 
          containerPort: 3306
          hostPort: 3306
