wildfly-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wildfly
  labels: 
    name: wildfly
spec: 
  containers: 
    - image: arungupta/wildfly-mysql-javaee7:knetes
      name: wildfly
      ports: 
        - containerPort: 8080
          hostPort: 8080
