lb-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wildfly-service
spec: 
  selector: 
    app: wildfly-rs-pod
  ports:
    - name: web
      port: 8080
  type: LoadBalancer
